# fin_app

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_pipeline.py  test_drive_operations.py  test_langfuse_integration.py  test_oauth.py  test_pdf_extractor_demo.py
.github/workflows/: ci.yml
infrastructure/auth/: oauth.py  service_account.py
infrastructure/database/: base_database.py  database_manager.py  postgres_database.py
infrastructure/gdrive/: drive_gateway.py  google_drive_gateway.py
infrastructure/llm/: __init__.py  base.py  factory.py  gemini_provider.py  langfuse_wrapper.py  openai_provider.py  prompt_manager.py
infrastructure/llm/prompts/: library.json
infrastructure/llm/pydantic_models/: transactions.py
infrastructure/pdf_extractor/: docling_extractor.py  pdfminer_extractor.py  pymupdf_extractor.py
plan/: 1_ggdrive_plan.md  plan.md
services/: factory.py  pdf_extractor.py
tests/: test_pdf_extractor.py
tests/infrastructure/: test_google_drive_gateway.py
