[project]
name = "personal-finance-report"
version = "0.1.0"
description = "Personal finance report generator"
authors = [
    {name = "Vinh Nguyen", email = "vinh2000ld14@gmail.com"}
]
dependencies = [
    "google-api-python-client==2.108.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.1.0",
    "google-auth==2.23.4",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "pymupdf>=1.24.0",
    "pdfminer.six",
    "openai>=1.0.0",
    "google-genai>=0.1.0",
    "langfuse==3.2.1",
    "docling>=2.43.0",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services", "infrastructure"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 